# slopify-music

./: .env.example  .gitignore  README.md  postman_collection.json  pyproject.toml  railway.json  requirements.txt  skills-lock.json
app/: __init__.py  config.py  main.py  models.py
app/routes/: prompt.py  songs.py
app/services/: album_video.py  elevenlabs_music.py  openai_images.py  openai_text.py  provider_keys.py  supabase_songs.py
supabase/: schema.sql
