[project]
name = "slopify-music-api"
version = "0.1.0"
description = "FastAPI service for generating music with ElevenLabs and storing files in Supabase."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "openai>=1.79.0,<2.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "supabase>=2.9.1,<3.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
